# Customer-Shopping-Trends-Dataset

./: .gitignore  README.md  pyproject.toml  random.txt
docs/: shopping_trend_task.txt
reports/: result.txt
scripts/: analysis.py  data_loader.py  data_preprocessing.py
