[tool.poetry]
name = "shopping-trends-project"
version = "0.1.0"
description = "This project captures customer shopping preferences, providing vital insights for businesses aiming to better understand their clientele"
authors = ["Isioma Iloh <ilohkingsleyisioma@gmail.com>"]
readme = "README.md"
rpository = ""

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
